--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
+	<title>roirepus</title>
 	<link href="style.css" rel="stylesheet">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,7 +29,7 @@
 			<p>I make stuff</p>
 		</div>
 		<div class="main-img">
-			<img src="images/IMG20240212130345-photoaidcom-cropped.jpg" class="doggo" alt="">
+			<img src="images/IMG20240212130345-photoaidcom-cropped.jpg" class="doggo" alt="picture of a cute pup">
 		</div>
 	</div>
 
@@ -57,7 +57,7 @@
 
 			<div class="discord">
 
-				<a href="discordapp.com/users/738632910994931762/">
+				<a href="https://discordapp.com/users/738632910994931762/">
 					<?xml version="1.0" encoding="UTF-8"?>
 					<svg class="logo" viewBox="0 -28.5 256 256" version="1.1" xmlns="http://www.w3.org/2000/svg"
 						xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid">
@@ -72,7 +72,7 @@
 				</a>
 			</div>
 			<div class="twitter">
-				<a href="x.com/chhoti_slice" target="_blank">
+				<a href="https://x.com/chhoti_slice" target="_blank">
 					<svg class="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 						<path fill="#94e2d5"
 							d="M24 4.557a9.838 9.838 0 0 1-2.828.775 4.958 4.958 0 0 0 2.165-2.724 9.865 9.865 0 0 1-3.127 1.195 4.936 4.936 0 0 0-8.397 4.494A13.978 13.978 0 0 1 1.671 3.15a4.936 4.936 0 0 0 1.527 6.574 4.917 4.917 0 0 1-2.239-.618c-.054 2.28 1.581 4.415 3.949 4.89a4.927 4.927 0 0 1-2.23.084 4.936 4.936 0 0 0 4.604 3.42A9.894 9.894 0 0 1 0 19.54a13.987 13.987 0 0 0 7.548 2.212c9.057 0 14.01-7.496 14.01-13.986 0-.213-.005-.426-.014-.637A9.936 9.936 0 0 0 24 4.557z" />
@@ -83,10 +83,6 @@
 		</div>
 	</div>
 </body>
-
-
-
-</html>
 
 </html>
 
