--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	</div>
 	<div class="main">
 		<div class="main-text">
-			roirepus.com
+			roirepus.in
 			<p>I make stuff</p>
 		</div>
 		<div class="main-img">
