--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 			<div class="linkedin">
 
-				<a href="https://www.linkedin.com/in/roirepus/" target="_blank"> <svg class="logo"
+				<a href="#" target="_blank"> <svg class="logo"
 						xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
 						<path fill="#94e2d5"
 							d="M100.28 448H7.4V148.9h92.88zm-46.14-332A53.78 53.78 0 1 1 107.92 62 53.78 53.78 0 0 1 54.14 116zM447.91 448h-92.88V302.4c0-34.71-12.48-58.45-43.68-58.45-23.83 0-38.03 16.04-44.27 31.47-2.28 5.54-2.85 13.28-2.85 21v151.6H171.42s1.22-246.16 0-271.77h92.88v38.53c-0.18 0.29-0.43 0.61-0.61 0.89h0.61v-0.89c12.33-18.97 34.32-46.05 83.48-46.05 60.92 0 106.46 39.79 106.46 125.29V448z" />
@@ -47,7 +47,7 @@
 
 			<div class="github">
 
-				<a href="https://github.com/roirepus" target="_blank">
+				<a href="#" target="_blank">
 					<svg class="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 						<path fill="#94e2d5"
 							d="M12 .297C5.373.297 0 5.67 0 12.297c0 5.302 3.438 9.8 8.207 11.387.6.11.793-.26.793-.577v-2.17c-3.338.726-4.033-1.61-4.033-1.61-.546-1.385-1.334-1.754-1.334-1.754-1.09-.745.082-.729.082-.729 1.205.084 1.84 1.236 1.84 1.236 1.07 1.835 2.809 1.305 3.494.998.107-.774.418-1.305.762-1.605-2.665-.303-5.466-1.332-5.466-5.93 0-1.31.469-2.38 1.236-3.22-.123-.303-.536-1.52.117-3.165 0 0 1.008-.323 3.3 1.23a11.52 11.52 0 0 1 3.004-.403c1.02.005 2.045.137 3.004.403 2.29-1.554 3.295-1.23 3.295-1.23.653 1.645.24 2.862.118 3.165.77.84 1.235 1.91 1.235 3.22 0 4.61-2.804 5.624-5.475 5.92.43.372.81 1.102.81 2.222v3.293c0 .319.192.694.8.576C20.565 22.092 24 17.592 24 12.297 24 5.67 18.627.297 12 .297z" />
@@ -72,7 +72,7 @@
 				</a>
 			</div>
 			<div class="twitter">
-				<a href="https://x.com/chhoti_slice" target="_blank">
+				<a href="#" target="_blank">
 					<svg class="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 						<path fill="#94e2d5"
 							d="M24 4.557a9.838 9.838 0 0 1-2.828.775 4.958 4.958 0 0 0 2.165-2.724 9.865 9.865 0 0 1-3.127 1.195 4.936 4.936 0 0 0-8.397 4.494A13.978 13.978 0 0 1 1.671 3.15a4.936 4.936 0 0 0 1.527 6.574 4.917 4.917 0 0 1-2.239-.618c-.054 2.28 1.581 4.415 3.949 4.89a4.927 4.927 0 0 1-2.23.084 4.936 4.936 0 0 0 4.604 3.42A9.894 9.894 0 0 1 0 19.54a13.987 13.987 0 0 0 7.548 2.212c9.057 0 14.01-7.496 14.01-13.986 0-.213-.005-.426-.014-.637A9.936 9.936 0 0 0 24 4.557z" />
