--- a/index.html
+++ b/index.html
@@ -14,30 +14,35 @@
 
 
 <body>
-	<div class="header">
-		<div class="projects">
-			<a href="#">Touch Some Grass</a>
-			<a href="#">AeroTrain</a>
-			<a href="#">BookBridge</a>
+	<header>
+		<div class="header">
+			<div class="projects-container">
+				<div class="projects">
+					<a href="#">Touch Some Grass</a>
+					<a href="#">AeroTrain</a>
+					<a href="#">BookBridge</a>
+				</div>
+			</div>
 		</div>
+	</header>
 
-	</div>
-	<div class="main">
-		<div class="main-text">
-			roirepus.in
-			<p>Quietly building cool stuff</p>
+	<main>
+		<div class="main-card">
+			<div class="main-text">
+				<p class="roirepus-text">roirepus.in</p>
+				<p class="tagline">Quietly building cool stuff</p>
+			</div>
+			<div class="main-img">
+				<img src="images/pfp.png" class="pfp" alt="pfp">
+
+			</div>
 		</div>
-		<div class="main-img">
-			<img src="images/pfp-removebg-preview.png" class="doggo" alt="picture of a cute pup">
+	</main>
 
-		</div>
-	</div>
-
-	<div class="footer">
-		<div class="social">
+	<footer class="footer">
+		<div class="social-container">
 
 			<div class="linkedin">
-
 				<a href="#" target="_blank"> <svg class="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
 						<path
 							d="M100.28 448H7.4V148.9h92.88zm-46.14-332A53.78 53.78 0 1 1 107.92 62 53.78 53.78 0 0 1 54.14 116zM447.91 448h-92.88V302.4c0-34.71-12.48-58.45-43.68-58.45-23.83 0-38.03 16.04-44.27 31.47-2.28 5.54-2.85 13.28-2.85 21v151.6H171.42s1.22-246.16 0-271.77h92.88v38.53c-0.18 0.29-0.43 0.61-0.61 0.89h0.61v-0.89c12.33-18.97 34.32-46.05 83.48-46.05 60.92 0 106.46 39.79 106.46 125.29V448z" />
@@ -45,7 +50,6 @@
 			</div>
 
 			<div class="github">
-
 				<a href="#" target="_blank">
 					<svg class="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 						<path
@@ -55,7 +59,6 @@
 			</div>
 
 			<div class="discord">
-
 				<a href="https://discordapp.com/users/738632910994931762/">
 					<?xml version="1.0" encoding="UTF-8"?>
 					<svg class="logo" viewBox="0 -28.5 256 256" version="1.1" xmlns="http://www.w3.org/2000/svg"
@@ -70,6 +73,7 @@
 					</svg>
 				</a>
 			</div>
+
 			<div class="twitter">
 				<a href="#" target="_blank">
 					<svg class="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -78,6 +82,7 @@
 					</svg>
 				</a>
 			</div>
+
 			<div class="email">
 				<a href="mailto:yourname@example.com" target="_blank" class="group inline-block">
 					<svg class="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -86,8 +91,9 @@
 					</svg>
 				</a>
 			</div>
+
 		</div>
-	</div>
+	</footer>
 </body>
 
 </html>
