--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>roirepus</title>
+	<title>hiicharm</title>
 	<link href="style.css" rel="stylesheet">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,7 +29,7 @@
 	<main>
 		<div class="main-card">
 			<div class="main-text">
-				<p class="roirepus-text">roirepus.in</p>
+				<p class="roirepus-text">charm.in</p>
 				<p class="tagline">Quietly building cool stuff</p>
 			</div>
 			<div class="main-img">
