--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<div class="main-card">
 			<div class="main-text">
 				<p class="roirepus-text">charm.in</p>
-				<p class="tagline">Quietly building cool stuff</p>
+				<p class="tagline">quietly building cool stuff</p>
 			</div>
 			<div class="main-img">
 				<img src="images/pfp.jpg" class="pfp" alt="pfp">
