--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 					<a href="https://qtstream.in" target="_blank">qtstream.in</a>
 					<a href="#">aerotrain</a>
 					<a href="#">bookbridge</a>
+					<a href="https://wiki.charm.in">wiki</a>
 				</div>
 			</div>
 		</div>
@@ -43,6 +44,24 @@
 	<footer class="footer">
 		<div class="social-container">
 
+
+			<div class="email">
+				<a href="mailto:say@hiicharm.in" target="_blank" class="group inline-block">
+					<svg class="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+						<path
+							d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2Zm0 2v.01L12 13 4 6.01V6h16ZM4 18V8l8 5 8-5v10H4Z" />
+					</svg>
+				</a>
+			</div>
+
+			<div class="twitter">
+				<a href="https://x.com/highcharm" target="_blank">
+					<svg class="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+						<path
+							d="M24 4.557a9.838 9.838 0 0 1-2.828.775 4.958 4.958 0 0 0 2.165-2.724 9.865 9.865 0 0 1-3.127 1.195 4.936 4.936 0 0 0-8.397 4.494A13.978 13.978 0 0 1 1.671 3.15a4.936 4.936 0 0 0 1.527 6.574 4.917 4.917 0 0 1-2.239-.618c-.054 2.28 1.581 4.415 3.949 4.89a4.927 4.927 0 0 1-2.23.084 4.936 4.936 0 0 0 4.604 3.42A9.894 9.894 0 0 1 0 19.54a13.987 13.987 0 0 0 7.548 2.212c9.057 0 14.01-7.496 14.01-13.986 0-.213-.005-.426-.014-.637A9.936 9.936 0 0 0 24 4.557z" />
+					</svg>
+				</a>
+			</div>
 			<div class="linkedin">
 				<a href="https://linkedin.com/in/hiicharm" target="_blank"> <svg class="logo" xmlns="http://www.w3.org/2000/svg"
 						viewBox="0 0 448 512">
@@ -76,23 +95,7 @@
 			<!-- 	</a> -->
 			<!-- </div> -->
 
-			<!-- <div class="twitter"> -->
-			<!-- 	<a href="#" target="_blank"> -->
-			<!-- 		<svg class="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"> -->
-			<!-- 			<path -->
-			<!-- 				d="M24 4.557a9.838 9.838 0 0 1-2.828.775 4.958 4.958 0 0 0 2.165-2.724 9.865 9.865 0 0 1-3.127 1.195 4.936 4.936 0 0 0-8.397 4.494A13.978 13.978 0 0 1 1.671 3.15a4.936 4.936 0 0 0 1.527 6.574 4.917 4.917 0 0 1-2.239-.618c-.054 2.28 1.581 4.415 3.949 4.89a4.927 4.927 0 0 1-2.23.084 4.936 4.936 0 0 0 4.604 3.42A9.894 9.894 0 0 1 0 19.54a13.987 13.987 0 0 0 7.548 2.212c9.057 0 14.01-7.496 14.01-13.986 0-.213-.005-.426-.014-.637A9.936 9.936 0 0 0 24 4.557z" /> -->
-			<!-- 		</svg> -->
-			<!-- 	</a> -->
-			<!-- </div> -->
 
-			<div class="email">
-				<a href="mailto:say@hiicharm.in" target="_blank" class="group inline-block">
-					<svg class="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-						<path
-							d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2Zm0 2v.01L12 13 4 6.01V6h16ZM4 18V8l8 5 8-5v10H4Z" />
-					</svg>
-				</a>
-			</div>
 
 		</div>
 	</footer>
