--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<a href="https://qtstream.in" target="_blank">qtstream.in</a>
 					<a href="#">aerotrain</a>
 					<a href="#">bookbridge</a>
-					<a href="https://wiki.charm.in">wiki</a>
+					<a href="https://wiki.hiicharm.in">wiki</a>
 				</div>
 			</div>
 		</div>
